@@ -69,6 +69,10 @@ namespace libtorrent
 		free_upload_amount = 4 * 16 * 1024
 	};
 
+	void request_a_block(
+		torrent& t
+		, peer_connection& c
+		, std::vector<peer_connection*> ignore = std::vector<peer_connection*>());
 
 	class TORRENT_EXPORT policy
 	{
